--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -168,15 +168,15 @@
             *Password is required
           </p>
           <ion-item>
-            <ion-label floating>Salesman Code</ion-label>
+            <ion-label floating>SM Code</ion-label>
             <ion-input type="text" formControlName="externalId"></ion-input>
           </ion-item>
           <p class="error" *ngIf="externalId.hasError('required') && externalId.touched">
-            *Salesman code is required
+            *SM code is required
           </p>
           <ion-grid>
             <button ion-button color="secondary" [disabled]="!(addSalesmanForm.controls.name.valid && addSalesmanForm.controls.userLoginId.valid && addSalesmanForm.controls.password.valid)"
-              (click)="createUser('salesman');">Add Salesman<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+              (click)="createUser('salesman');">Add SM<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-grid>
         </form>
       </ion-col>
@@ -210,11 +210,11 @@
             <ion-input type="text" formControlName="externalId"></ion-input>
           </ion-item>
           <p class="error" *ngIf="externalId.hasError('required') && externalId.touched">
-            *Salesmanager code is required
+            *SM code is required
           </p>
           <ion-grid>
             <button ion-button color="secondary" [disabled]="!(addSalesmanForm.controls.name.valid && addSalesmanForm.controls.userLoginId.valid && addSalesmanForm.controls.password.valid)"
-              (click)="createUser('salesman');">Add Salesmanager<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+              (click)="createUser('salesman');">Add SM<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-grid>
         </form>
       </ion-col>
