--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -68,7 +68,7 @@
         <ion-row *ngIf="order.salesmanCode && order.salesmanName">
           <ion-col>
               <ion-icon color="grey" name=help-buoy></ion-icon>
-              <span class="order-list-label">Salesman:</span> {{order.salesmanName}} [{{order.salesmanCode}}]
+              <span class="order-list-label">SM:</span> {{order.salesmanName}} [{{order.salesmanCode}}]
           </ion-col>
         </ion-row>
         <ion-row>
