--- a/src/pages/admin-list-salesman/admin-list-salesman.html
+++ b/src/pages/admin-list-salesman/admin-list-salesman.html
@@ -3,10 +3,10 @@
     <!-- <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button> -->
-    <ion-title>Salesman List</ion-title>
+    <ion-title>SM List</ion-title>
   </ion-navbar>
   <ion-toolbar>
-    <ion-searchbar  #q (ionChange)="searchSalesman(q.value)" placeholder="Search Salesman"></ion-searchbar>
+    <ion-searchbar  #q (ionChange)="searchSalesman(q.value)" placeholder="Search SM"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
