--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -60,7 +60,7 @@
               <ion-icon name=help-buoy color="grey"></ion-icon> Customer Name: <span>{{orderDetail.userDetail.name}}</span>
             </ion-col>
             <ion-col col-12 text-center *ngIf="orderDetail.salesmanName">
-              <ion-icon name=help-buoy color="grey"></ion-icon> Salesman Name: <span>{{orderDetail.salesmanName}}</span>
+              <ion-icon name=help-buoy color="grey"></ion-icon> SM Name: <span>{{orderDetail.salesmanName}}</span>
             </ion-col>
             <ion-col col-12 text-center>
               <ion-icon name="pin" color="grey"></ion-icon> Province: <span>{{orderDetail.userDetail.country}} [ {{orderDetail.userDetail.province}} ]</span>
