--- a/src/pages/user-payment-history/user-payment-history.html
+++ b/src/pages/user-payment-history/user-payment-history.html
@@ -28,7 +28,7 @@
   
           <ion-row *ngIf="payment.paidTo">
             <ion-col col-12 text-center>
-                <ion-icon color="grey" name="star"></ion-icon>Salesman: <strong text-uppercase>{{payment.paidTo}}</strong>
+                <ion-icon color="grey" name="star"></ion-icon>SM: <strong text-uppercase>{{payment.paidTo}}</strong>
             </ion-col>
           </ion-row>
   
