--- a/src/pages/edit-user/edit-user.html
+++ b/src/pages/edit-user/edit-user.html
@@ -6,6 +6,11 @@
 <ion-content class="full-background">
 
   <ion-grid>
+    <ion-row>
+      <ion-col>
+        <button ion-button full (click)="openCustomerDashboardModel()"> View Customer Dashboard</button>
+      </ion-col>
+    </ion-row>
     <ion-row padding>
       <ion-col>
         <ion-list>
@@ -26,8 +31,8 @@
           </ion-item>
           <ion-item>
             <ion-label floating *ngIf="userData.userType === 'CUSTOMER'">Customer Code</ion-label>
-            <ion-label floating *ngIf="userData.userType === 'SALESMAN'">Salesman Code</ion-label>
-            <ion-label floating *ngIf="userData.userType === 'SALESMANAGER'">Salesmanager Code</ion-label>
+            <ion-label floating *ngIf="userData.userType === 'SALESMAN'">SM Code</ion-label>
+            <ion-label floating *ngIf="userData.userType === 'SALESMANAGER'">SM Code</ion-label>
             <ion-input disabled="true" type="text" [(ngModel)]="custCode"></ion-input>
           </ion-item>
           <ion-item *ngIf="userData.userType === 'CUSTOMER' ">
@@ -41,7 +46,7 @@
           <ion-grid>
             <ion-row class='associated-salesman' *ngIf="userData.userType === 'CUSTOMER' ">
                 <ion-col col-8>
-                    <ion-label class="custom-title">Associated Salesman </ion-label>
+                    <ion-label class="custom-title">Associated SM </ion-label>
                 </ion-col>
                 <ion-col col-4>
                     <button ion-button color="secondary" (click)="opneSalesmanModalPage()" style="float: right"><ion-icon name="add"></ion-icon></button>
@@ -57,9 +62,9 @@
             <button *ngIf="userData.userType === 'CUSTOMER'" ion-button color="secondary"  (click)="updateUser()" class="update-btn">Update
               Customer<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
             <button *ngIf="userData.userType === 'SALESMAN'" ion-button color="secondary"  (click)="updateUser()" class="update-btn">Update
-              Salesman<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+              SM<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
             <button *ngIf="userData.userType === 'SALESMANAGER'" ion-button color="secondary"  (click)="updateUser()" class="update-btn">Update
-              Salesmanager<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+              SM<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-grid>
       </ion-col>
       </ion-row>
