Salesman Order List Local Pagination

--- a/src/pages/associated-customers-list-order/associated-customers-list-order.html
+++ b/src/pages/associated-customers-list-order/associated-customers-list-order.html
@@ -10,8 +10,9 @@
     <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
-    <div *ngIf="orderListAvailable && (orderList.length > 0)">
-    <ion-card *ngFor="let order of orderList">
+    <div *ngIf="orderListAvailable && (orderList.length > 0)"> 
+    <ion-card *ngFor="let order of orderList | slice:0:slice; let i=index">
+      <!-- <ion-card *ngFor="let order of orderList"> -->
       <ion-card-content>
         <ion-row>
           <ion-col text-center>
