--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,4 +1,4 @@
-<ion-header class="{{colorType}}">
+<ion-header>
   <ion-navbar hideBackButton="true">
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
@@ -301,7 +301,7 @@
   </button> -->
 
 </ion-content>
-<ion-footer class="{{colorType}}">
+<ion-footer>
   <button ion-button  padding class="customerdashboardBtn btn-left" (click)="openPaymentModal()"><ion-icon name="cash"></ion-icon>Add Payment</button>
   <button ion-button  padding class="customerdashboardBtn" (click)="openShopPage()"><ion-icon name="cart"></ion-icon>Place Order</button>
 </ion-footer>
