Added View Customer Payment Btn

--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -13,10 +13,10 @@
 </ion-header>
 
 <ion-content class="full-background">
-  <!-- <button ion-button full padding class="salesmanDashboardBtn" (click)="openCustomerOrderList()"
+  <button ion-button full padding class="salesmanDashboardBtn" (click)="openCustomerPaymentHistory()"
       [ngClass]=" customerDashboard ? 'item-hidden': 'item-visible'">
-      View Customer Orders
-  </button> -->
+      View Customer Payments
+  </button>
 
   <!-- <button ion-button  padding class="customerdashboardBtn" (click)="openPaymentModal()">
     Add Payment
