--- a/src/pages/view-customer-data/view-customer-data.html
+++ b/src/pages/view-customer-data/view-customer-data.html
@@ -116,7 +116,7 @@
             </ion-row>
   </ion-card>
 
-  <ion-card class="tabs-wrapper" *ngIf="data.tkPoints !== undefined">
+  <ion-card class="tabs-wrapper" *ngIf="customerDashboard==true">
       <ion-card-header class="card-title">
         TK CURRENCY
       </ion-card-header>
