add dashboard option in developer zone

--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -32,4 +32,7 @@
   <ion-item>
     <button full large ion-button (click)="createNewProductInMongo()">Create New Product in Mongo</button>
   </ion-item>
+  <ion-item>
+    <button full large ion-button (click)="updateUserDashboardData()">Update User Dashboard Data in Mongo</button>
+  </ion-item>
 </ion-content>
