Fix Button Label
Text Wrap for Button Labels in Developert Login

--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -15,24 +15,24 @@
 
 <ion-content padding>
   <ion-item>
-    <button full large ion-button (click)="updateProductInMongo()">Update Proudct</button>
+    <button full large text-wrap ion-button (click)="updateProductInMongo()">Update Proudct</button>
   </ion-item>
   <ion-item>
-    <button full large ion-button (click)="updateProductStatInERP()">Update Product Stat in ERP</button>
+    <button full large text-wrap ion-button (click)="updateProductStatInERP()">Update Product Stat in ERP</button>
   </ion-item>
   <ion-item>
-    <button full large ion-button (click)="updateCustomerInMongo()">Update Customer</button>
+    <button full large text-wrap ion-button (click)="updateCustomerInMongo()">Update Customer</button>
   </ion-item>
   <ion-item>
-    <button full large ion-button (click)="updateCustomerStatInERP()">Update Customer Stat in ERP</button>
+    <button full large text-wrap ion-button (click)="updateCustomerStatInERP()">Update Customer Stat in ERP</button>
   </ion-item>
   <ion-item>
-    <button full large ion-button (click)="createNewCustomerInMongo()">Create New Customer in Mongo</button>
+    <button full large text-wrap ion-button (click)="createNewCustomerInMongo()">Create New Customer in Mongo</button>
   </ion-item>
   <ion-item>
-    <button full large ion-button (click)="createNewProductInMongo()">Create New Product in Mongo</button>
+    <button full large text-wrap ion-button (click)="createNewProductInMongo()">Create New Product in Mongo</button>
   </ion-item>
   <ion-item>
-    <button full large ion-button (click)="updateUserDashboardData()">Update User Dashboard Data in Mongo</button>
+    <button full large text-wrap ion-button (click)="updateUserDashboardData()">Update User Dashboard Data in Mongo</button>
   </ion-item>
 </ion-content>
