add number pipe in dashboard data

--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -33,6 +33,15 @@
     <button full large text-wrap ion-button (click)="createNewProductInMongo()">Create New Product in Mongo</button>
   </ion-item>
   <ion-item>
-    <button full large text-wrap ion-button (click)="updateUserDashboardData()">Update User Dashboard Data in Mongo</button>
+    <button full large text-wrap ion-button (click)="updateParentIdInUserDoc()">Update Parent Id in User Doc Mongo</button>
+  </ion-item>
+  <ion-item>
+    <button full large text-wrap ion-button (click)="updateUserDashboardData()">Update Customer Dashboard Data in Mongo</button>
+  </ion-item>
+  <ion-item>
+    <button full large text-wrap ion-button (click)="updateNonUserDashboardData()">Update Executive Dashboard Data in Mongo</button>
+  </ion-item>
+  <ion-item>
+    <button full large text-wrap ion-button (click)="updateAssociatedSMListToMongo()">Update Associated SM in Mongo</button>
   </ion-item>
 </ion-content>
