--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -33,7 +33,7 @@
                   Target
                 </p>
                 <p class="tab-label-lg" align-items-center>
-                  {{data.target}}
+                  {{data.target | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -41,7 +41,7 @@
                     MTD Achieved
                   </p>
                   <p class="tab-label-lg">
-                    {{data.achievement}}
+                    {{data.achievement | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
@@ -60,7 +60,7 @@
                       Balance To Do
                     </p>
                     <p class="tab-label-lg">
-                      {{data.balanceToDo}}
+                      {{data.balanceToDo | number: '.2'}}
                   </p>
               </ion-col>
             </ion-row>
@@ -89,7 +89,7 @@
                       Total Credit Limit
                   </p>
                   <p class="tab-label-lg">
-                    {{data.creditLimit}}
+                    {{data.creditLimit !== 'NA' ? (data.creditLimit | number: '.2') : data.creditLimit}}
                   </p>
               </ion-col>
               <ion-col class="tabs">
@@ -97,7 +97,7 @@
                       Total Outstanding
                     </p>
                     <p class="tab-label-lg">
-                      {{data.currentOutStanding}}
+                      {{data.currentOutStanding !== 'NA' ? (data.currentOutStanding | number: '.2') : data.currentOutStanding}}
                   </p>
               </ion-col>
             </ion-row>
@@ -108,7 +108,7 @@
                         > 30- Days Outstanding
                     </p>
                     <p class="tab-label-lg">
-                      {{data.thirtyDaysOutStanding}}
+                      {{data.thirtyDaysOutStanding !== 'NA' ? (data.thirtyDaysOutStanding | number: '.2') : data.thirtyDaysOutStanding }}
                     </p>
                 </ion-col>
                 <ion-col class="tabs">
@@ -116,7 +116,7 @@
                         Available Credit Limit
                       </p>
                       <p class="tab-label-lg">
-                        {{data.availableCreditLimit}}
+                        {{data.availableCreditLimit !== 'NA' ? (data.availableCreditLimit | number: '.2') : data.availableCreditLimit}}
                     </p>
                 </ion-col>
               </ion-row>
