--- a/src/pages/salesman-dashboard/salesman-dashboard.html
+++ b/src/pages/salesman-dashboard/salesman-dashboard.html
@@ -46,7 +46,7 @@
                 Target
               </p>
               <p class="tab-label-lg" align-items-center>
-                {{data.target}}
+                  {{data.target | number: '.2'}}
               </p>
           </ion-col>
           <ion-col class="tabs">
@@ -54,7 +54,7 @@
                   MTD Achieved
                 </p>
                 <p class="tab-label-lg">
-                  {{data.achievement}}
+                  {{data.achievement | number: '.2'}}
               </p>
           </ion-col>
         </ion-row>
@@ -73,7 +73,7 @@
                     Balance To Do
                   </p>
                   <p class="tab-label-lg">
-                    {{data.balanceToDo}}
+                    {{data.balanceToDo | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
@@ -107,7 +107,7 @@
                     Total Credit Limit
                 </p>
                 <p class="tab-label-lg">
-                  {{data.creditLimit}}
+                  {{data.creditLimit !== 'NA' ? (data.creditLimit | number: '.2') : data.creditLimit}}                  
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -115,7 +115,7 @@
                     Total Outstanding
                   </p>
                   <p class="tab-label-lg">
-                    {{data.currentOutStanding}}
+                    {{data.currentOutStanding !== 'NA' ? (data.currentOutStanding | number: '.2') : data.currentOutStanding}}
                 </p>
             </ion-col>
           </ion-row>
@@ -126,7 +126,7 @@
                       > 30- Days Outstanding
                   </p>
                   <p class="tab-label-lg">
-                    {{data.thirtyDaysOutStanding}}
+                    {{data.thirtyDaysOutStanding !== 'NA' ? (data.thirtyDaysOutStanding | number: '.2') : data.thirtyDaysOutStanding }}                    
                   </p>
               </ion-col>
               <ion-col class="tabs">
@@ -134,7 +134,7 @@
                       Available Credit Limit
                     </p>
                     <p class="tab-label-lg">
-                      {{data.availableCreditLimit}}
+                      {{data.availableCreditLimit !== 'NA' ? (data.availableCreditLimit | number: '.2') : data.availableCreditLimit}}                      
                   </p>
               </ion-col>
             </ion-row>
