--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -44,7 +44,7 @@
                   Target
                 </p>
                 <p class="tab-label-lg" align-items-center>
-                  {{data.target}}
+                  {{data.target | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -52,7 +52,7 @@
                     MTD Achieved
                   </p>
                   <p class="tab-label-lg">
-                    {{data.achievement}}
+                    {{data.achievement | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
@@ -71,7 +71,7 @@
                       Balance To Do
                     </p>
                     <p class="tab-label-lg">
-                      {{data.balanceToDo}}
+                      {{data.balanceToDo | number: '.2'}}
                   </p>
               </ion-col>
             </ion-row>
@@ -104,7 +104,7 @@
                     Total Credit Limit
                 </p>
                 <p class="tab-label-lg">
-                  {{data.creditLimit}}
+                  {{data.creditLimit | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -112,7 +112,7 @@
                     Total Outstanding
                   </p>
                   <p class="tab-label-lg">
-                    {{data.currentOutStanding}}
+                    {{data.currentOutStanding | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
@@ -123,7 +123,7 @@
                       > 30- Days Outstanding
                   </p>
                   <p class="tab-label-lg">
-                    {{data.thirtyDaysOutStanding}}
+                    {{data.thirtyDaysOutStanding | number: '.2'}}
                   </p>
               </ion-col>
               <ion-col class="tabs">
@@ -131,7 +131,7 @@
                       Available Credit Limit
                     </p>
                     <p class="tab-label-lg">
-                      {{data.availableCreditLimit}}
+                      {{data.availableCreditLimit | number: '.2'}}
                   </p>
               </ion-col>
             </ion-row>
@@ -148,7 +148,7 @@
                   Total TK Points
                 </p>
                 <p class="tab-label-lg">
-                  {{data.tkPoints}}
+                  {{data.tkPoints | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -156,7 +156,7 @@
                     Total TK Currency
                   </p>
                   <p class="tab-label-lg">
-                    {{data.tkCurrency}}
+                    {{data.tkCurrency | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
