replace dashoard location with reset password

--- a/src/pages/admin-list-user/admin-list-user.html
+++ b/src/pages/admin-list-user/admin-list-user.html
@@ -46,7 +46,7 @@
                           <button ion-button outline color="secondary" item-end class="edit-user-btn" (click)="editCustomer(user)"><ion-icon name="create"></ion-icon>EDIT USER</button>
                         </ion-col>
                         <ion-col text-center size="12">
-                          <button ion-button color="light" class="rest-pass-btn" (click)="resetPasswordModel(user)">RESET PASSWORD</button>
+                          <button ion-button color="primary" class="rest-pass-btn" (click)="openCustomerDashboardModel(user)">View Dashboard</button>
                         </ion-col>
                     <!-- </ion-row> -->
                 </ion-col>
