--- a/src/pages/edit-user/edit-user.html
+++ b/src/pages/edit-user/edit-user.html
@@ -8,7 +8,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <button ion-button full (click)="openCustomerDashboardModel()"> View {{userTypeLabel}} Dashboard</button>
+          <button ion-button class="rest-pass-btn" (click)="resetPasswordModel()">RESET PASSWORD</button>
       </ion-col>
     </ion-row>
     <ion-row padding>
