--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -10,8 +10,8 @@
   <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-list *ngIf="productListAvailable &&  (productList.length > 0)">
-    <ion-card *ngFor="let product of productList">
+  <ion-list *ngIf="productListAvailable &&  (filteredProductList.length > 0)">
+    <ion-card *ngFor="let product of filteredProductList">
       <ion-card-content>
         <ion-row>
           <ion-col text-center>
@@ -55,7 +55,7 @@
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
   </ion-list>
-  <ion-card *ngIf="productListAvailable && (productList.length < 1)">
+  <ion-card *ngIf="productListAvailable && (filteredProductList.length < 1)">
     <ion-card-header text-center>
       <h4>No record found</h4>
     </ion-card-header>
