--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -60,6 +60,12 @@
             Total Tk-Points: <strong text-uppercase>{{order.totalTkPoints}}</strong>
           </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-col col-12 text-center>
+            <ion-icon color="grey" name="cog"></ion-icon>
+            Total Net Weight: <strong text-uppercase>{{order.totalNetWeight}}</strong>
+          </ion-col>
+        </ion-row>
           <ion-row>
             <ion-col col-12 text-center class="{{order.status}}">
                 <ion-icon color="grey" name="podium"></ion-icon>Status: <strong text-uppercase>{{order.status}}</strong>
