--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -78,6 +78,9 @@
             <ion-col col-12 text-center>
               <ion-icon name="trophy" color="grey"></ion-icon> <span>Total Tk-Points: {{orderDetail.totalTkPoints}}</span>
             </ion-col>
+            <ion-col col-12 text-center>
+              <ion-icon name="cog" color="grey"></ion-icon> <span>Total Net Weight: {{orderDetail.totalNetWeight}}</span>
+            </ion-col>
           </ion-row>
         </ion-card-content>
       </ion-card>
@@ -108,6 +111,12 @@
             <ion-col col-12 text-center>
               <ion-icon name="trophy" color="grey"></ion-icon>
               <span>Tk-Point: {{item.tkPoint}}</span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12 text-center>
+              <ion-icon name="trophy" color="grey"></ion-icon>
+              <span>Net Weight: {{item.netWeight}}</span>
             </ion-col>
           </ion-row>
         </ion-card-content>
