--- a/src/pages/admin-list-salesman/admin-list-salesman.html
+++ b/src/pages/admin-list-salesman/admin-list-salesman.html
@@ -1,12 +1,9 @@
 <ion-header>
   <ion-navbar>
-    <!-- <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button> -->
     <ion-title>SM List</ion-title>
   </ion-navbar>
   <ion-toolbar>
-    <ion-searchbar  #q (ionChange)="searchSalesman(q.value)" placeholder="Search SM"></ion-searchbar>
+    <ion-searchbar  #searchbar (ionChange)="searchSalesman(searchbar.value)" placeholder="Search SM"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
@@ -17,12 +14,12 @@
   <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-list *ngIf="salesmanListAvailable && (salesmanList.length > 0)">
+  <!-- <ion-list *ngIf="salesmanListAvailable && (salesmanList.length > 0)">
     <ion-item *ngFor="let salesman of filteredSalesmanList" (click)="editSalesman(salesman)">
       <span>{{salesman.externalId}}</span><span>{{salesman.name}}</span>
-      <p class="salesmanType" [ngClass]=" salesman.userType == 'SALESMANAGER' ? 'item-visible': 'item-hidden'">Manager</p>
+      <p class="salesmanType" [ngClass]=" salesman.userType == 'SALESMANAGER' ? 'item-visible': 'item-hidden'">Manager</p> -->
       <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="arrow-forward"></ion-icon></h1></button> -->
-      <button ion-button clear color="secondary" item-end>
+      <!-- <button ion-button clear color="secondary" item-end>
         <ion-icon name="create"></ion-icon>
       </button>
     </ion-item>
@@ -32,6 +29,41 @@
         <ion-icon name="alert"></ion-icon>
       <h4>No record found!</h4>
     </ion-card-header>
+  </ion-card> -->
+
+  <!--- Test fdsfjsdkfjksdfdfd-->
+    <ion-list *ngIf="salesmanListAvailable && (salesmanList.length > 0)">
+        <ion-card class="user-card" *ngFor="let salesman of filteredSalesmanList">
+            <ion-card-content>
+              <ion-row>
+                <ion-col size="3" class="user-id-col">
+                    <span class="user-id">{{salesman.externalId}}</span>
+                </ion-col>
+                <ion-col size="9">
+                    <!-- <ion-row class="buttonWrapper"> -->
+                        <ion-col text-center size="12" class="user-name-col">
+                          <span class="user-name">{{salesman.name}}</span>
+                          <!-- to show manager badge in item -->
+                          <!-- <p class="salesmanType" [ngClass]=" salesman.userType == 'SALESMANAGER' ? 'item-visible': 'item-hidden'">Manager</p> -->
+                        </ion-col>
+                        <ion-col text-center size="12">
+                          <button ion-button outline color="secondary" item-end class="edit-user-btn" (click)="editCustomer(salesman)"><ion-icon name="create"></ion-icon>EDIT SM</button>
+                        </ion-col>
+                        <ion-col text-center size="12">
+                          <button ion-button color="primary" class="rest-pass-btn" (click)="openCustomerDashboardModel(salesman)">View Dashboard</button>
+                        </ion-col>
+                    <!-- </ion-row> -->
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+    </ion-list>
+
+  <ion-card *ngIf="salesmanListAvailable && (salesmanList.length < 1)" class="noDataView">
+    <ion-card-header text-center>
+      <ion-icon name="alert"></ion-icon>
+        <h4>No record found!</h4>
+      </ion-card-header>
   </ion-card>
   <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
