--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -17,15 +17,15 @@
   <ion-item>
     <button full large text-wrap ion-button (click)="updateProductInMongo()">Update Proudct</button>
   </ion-item>
-  <ion-item>
+  <!-- <ion-item>
     <button full large text-wrap ion-button (click)="updateProductStatInERP()">Update Product Stat in ERP</button>
-  </ion-item>
+  </ion-item> -->
   <ion-item>
     <button full large text-wrap ion-button (click)="updateCustomerInMongo()">Update Customer</button>
   </ion-item>
-  <ion-item>
+  <!-- <ion-item>
     <button full large text-wrap ion-button (click)="updateCustomerStatInERP()">Update Customer Stat in ERP</button>
-  </ion-item>
+  </ion-item> -->
   <ion-item>
     <button full large text-wrap ion-button (click)="createNewCustomerInMongo()">Create New Customer in Mongo</button>
   </ion-item>
@@ -42,6 +42,6 @@
     <button full large text-wrap ion-button (click)="updateNonUserDashboardData()">Update Executive Dashboard Data in Mongo</button>
   </ion-item>
   <ion-item>
-    <button full large text-wrap ion-button (click)="updateAssociatedSMListToMongo()">Update Associated SM in Mongo</button>
+    <button full large text-wrap ion-button (click)="updateAssociatedSMListToMongo()">Update Sales Tree</button>
   </ion-item>
 </ion-content>
