--- a/src/pages/view-customer-data/view-customer-data.html
+++ b/src/pages/view-customer-data/view-customer-data.html
@@ -27,7 +27,7 @@
                   Target
                 </p>
                 <p class="tab-label-lg" align-items-center>
-                  {{data.target}}
+                  {{data.target | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -35,7 +35,7 @@
                     MTD Achieved
                   </p>
                   <p class="tab-label-lg">
-                    {{data.achievement}}
+                  {{data.achievement | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
@@ -54,7 +54,7 @@
                       Balance To Do
                     </p>
                     <p class="tab-label-lg">
-                      {{data.balanceToDo}}
+                  {{data.balanceToDo | number: '.2'}}
                   </p>
               </ion-col>
             </ion-row>
@@ -77,24 +77,24 @@
         OUTSTANDING
       </ion-card-header>
       
-          <ion-row>
-            <ion-col class="tabs">
-                <p class="tab-label-sm">
-                    Total Credit Limit
+      <ion-row>
+          <ion-col class="tabs">
+              <p class="tab-label-sm">
+                  Total Credit Limit
+              </p>
+              <p class="tab-label-lg">
+                {{data.creditLimit !== 'NA' ? (data.creditLimit | number: '.2') : data.creditLimit}}
+              </p>
+          </ion-col>
+          <ion-col class="tabs">
+              <p class="tab-label-sm">
+                  Total Outstanding
                 </p>
                 <p class="tab-label-lg">
-                  {{data.creditLimit}}
-                </p>
-            </ion-col>
-            <ion-col class="tabs">
-                <p class="tab-label-sm">
-                    Total Outstanding
-                  </p>
-                  <p class="tab-label-lg">
-                    {{data.currentOutStanding}}
-                </p>
-            </ion-col>
-          </ion-row>
+                  {{data.currentOutStanding !== 'NA' ? (data.currentOutStanding | number: '.2') : data.currentOutStanding}}
+              </p>
+          </ion-col>
+        </ion-row>
 
           <ion-row *ngIf="data.thirtyDaysOutStanding !== undefined">
               <ion-col class="tabs">
@@ -102,7 +102,7 @@
                       > 30- Days Outstanding
                   </p>
                   <p class="tab-label-lg">
-                    {{data.thirtyDaysOutStanding}}
+                    {{data.thirtyDaysOutStanding !== 'NA' ? (data.thirtyDaysOutStanding | number: '.2') : data.thirtyDaysOutStanding }}
                   </p>
               </ion-col>
               <ion-col class="tabs">
@@ -110,7 +110,7 @@
                       Available Credit Limit
                     </p>
                     <p class="tab-label-lg">
-                      {{data.availableCreditLimit}}
+                      {{data.availableCreditLimit !== 'NA' ? (data.availableCreditLimit | number: '.2') : data.availableCreditLimit}}
                   </p>
               </ion-col>
             </ion-row>
@@ -127,7 +127,7 @@
                   Total TK Points
                 </p>
                 <p class="tab-label-lg">
-                  {{data.tkPoints}}
+                  {{data.tkPoints | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -135,7 +135,7 @@
                     Total TK Currency
                   </p>
                   <p class="tab-label-lg">
-                    {{data.tkCurrency}}
+                    {{data.tkCurrency | number: '.2'}}
                 </p>
             </ion-col>
           </ion-row>
