--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -79,7 +79,7 @@
               <ion-icon name="trophy" color="grey"></ion-icon> <span>Total Tk-Points: {{orderDetail.totalTkPoints}}</span>
             </ion-col>
             <ion-col col-12 text-center>
-              <ion-icon name="cog" color="grey"></ion-icon> <span>Total Net Weight: {{orderDetail.totalNetWeight}}</span>
+              <ion-icon name="cog" color="grey"></ion-icon> <span>Total Net Weight: {{orderDetail.totalNetWeight}} tonnage</span>
             </ion-col>
           </ion-row>
         </ion-card-content>
@@ -116,7 +116,7 @@
           <ion-row>
             <ion-col col-12 text-center>
               <ion-icon name="trophy" color="grey"></ion-icon>
-              <span>Net Weight: {{item.netWeight}}</span>
+              <span>Net Weight: {{item.netWeight}} Kg</span>
             </ion-col>
           </ion-row>
         </ion-card-content>
