--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -45,7 +45,7 @@
         <ion-row *ngIf="product.tkPoint">
           <ion-col text-center>
             <ion-icon name="cog" color="grey"></ion-icon>
-            Net Weight: <span>{{product.netWeight}}</span>
+            Net Weight: <span>{{product.netWeight.toFixed(2)}} Kg</span>
           </ion-col>
         </ion-row>
         <ion-row>
